# pipewire_control

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: conf_gen.rs  effects_chain.rs  ipc.rs  ladspa.rs  lib.rs  lv2.rs  model.rs  playback.rs  preset.rs  pw_engine.rs  router.rs  soundboard.rs  state.rs  virtual_mic.rs
crates/effects/: Cargo.toml
crates/effects/src/: lib.rs
crates/effects/src/builtin/: mod.rs  parametric_eq.rs
crates/gtk-app/: Cargo.toml
crates/gtk-app/src/: main.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: main.rs  soundboard_api.rs
crates/web-server/static/: index.html
scripts/: dump-lv2.sh
