[workspace]
members = [
    "crates/core",
    "crates/effects",
    "crates/cli",
    "crates/gtk-app",
    "crates/web-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["eienwolf"]
license = "GPL-3.0"

[workspace.dependencies]
# PipeWire
pipewire = "0.9"

# GTK
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_6"] }
relm4 = { version = "0.9", features = ["libadwaita"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# System
dirs = "5"
