[package]
name = "pwctl"
description = "CLI interface for pipewire-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pwctl"
path = "src/main.rs"

[dependencies]
pipewire-control-core = { path = "../core" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
