[package]
name = "pipewire-control-core"
description = "PipeWire engine, routing state, and IPC for pipewire-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pipewire.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
