[package]
name = "pipewire-control-effects"
description = "Built-in DSP effects and LV2/LADSPA plugin loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pipewire-control-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
