[package]
name = "pipewire-control-web"
description = "Optional HTTP + WebSocket server for pipewire-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pipewire-control-web"
path = "src/main.rs"

[dependencies]
pipewire-control-core = { path = "../core" }
pipewire.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
